# Distributed_MachineLearning_Training_Inference

./: .gitignore  PROJECT_CONTEXT.md  README.md  bootstrap_macos.sh  bootstrap_windows.ps1  context.txt  leader_macos.sh  pyproject.toml  requirements.txt
dml_cluster/: __init__.py  distributed_training.py  leader.py  models.py  worker.py
dml_cluster/communication/: protocol.py  server.py
dml_cluster/distributed/: data.py  datasets.py  models.py  reporting.py
dml_cluster/distributed/common/: metrics.py  network.py  optimization.py  power.py
dml_cluster/distributed/data_parallel/: compression.py  leader_session.py  runner.py  worker_session.py
dml_cluster/distributed/data_parallel/all_reduce/: __init__.py  compression.py  leader_session.py  runner.py  worker_session.py
dml_cluster/distributed/data_parallel/parameter_server/: __init__.py  leader_session.py  (+3 more)
dml_cluster/distributed/hybrid_parallel/: runner.py
dml_cluster/distributed/pipeline_parallel/: leader_session.py  runner.py  splits.py  worker_session.py
dml_cluster/federated/: leader_session.py  training.py
dml_cluster/system/: hardware.py
docs/: index.html  leader.html  styles.css  worker.html
experiments/: long_resnet101_data_tinyimagenet.sh  long_resnet101_pipeline_tinyimagenet.sh  long_vit_b16_data_tinyimagenet.sh  run_experiments.sh  smoke_resnet101_data_tinyimagenet.sh  smoke_resnet101_parameter_server_tinyimagenet.sh  smoke_resnet101_pipeline_tinyimagenet.sh  smoke_vit_b16_data_tinyimagenet.sh  summarize_runs.py
installations/: bootstrap_macos.sh  bootstrap_windows.ps1  leader_macos.sh
