[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tailscale-dml"
version = "0.1.0"
description = "Minimal Tailscale-connected distributed ML training skeleton"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "matplotlib>=3.8", "pandas>=2.0"]

[tool.setuptools.packages.find]
include = ["dml_cluster*"]

[project.scripts]
dml-leader = "dml_cluster.leader:cli"
dml-worker = "dml_cluster.worker:cli"
